<resources>
    <string name="app_name">HomeFitness24</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">月表示</string>
    <string name="tab_text_2">週表示</string>
    <string name="tab_text_3">動画一覧</string>
    <string name="tab_text_4">スケジュール作成 [0]</string>

    <!-- dialog button strings-->
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="cancel">キャンセル</string>
    <string name="create_event">スケジュール追加</string>
    <string name="move_up">上に移動</string>
    <string name="move_down">下に移動</string>
    <string name="move_to_next_tab">スケジュール設定に進む</string>
    <string name="stay_in_current_tab">続けて選択する</string>

    <!-- create event tab strings-->
    <string name="title_video_name">プログラム名</string>
    <string name="instructor_name">インストラクター</string>
    <string name="cal_burnt">消費カロリー</string>
    <string name="release_date">公開日</string>
    <string name="video_length">動画の長さ</string>

    <!-- image desc-->
    <string name="thumbnail_image_desc">thumbnail image</string>

    <!-- create event right side display strings-->
    <string name="total_time">総再生時間</string>
    <string name="create_event_details">日時設定</string>
    <string name="start_date">期間（開始日）</string>
    <string name="end_date">期間（終了日）</string>
    <string name="start_time">開始時刻</string>
    <string name="end_time">リピート終了時刻</string>
    <string name="days">曜日</string>
    <string name="registration">登録</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="sunday">日</string>


    <string name="add_to_event">選択</string>
    <string name="more">すべて見る</string>
    <string name="selected">選択済</string>
    <string name="add_more_videos">動画を追加</string>


    <string-array name="period_list">
        <item>リピート</item>
        <item>期間指定</item>
        <item>曜日指定</item>
        <item>当日のみ</item>
    </string-array>

    <string-array name="edit_reservation">
        <item>当日のみ</item>
    </string-array>


    <string-array name="sort">
        <item>公開日</item>
        <item>動画の長さ</item>
    </string-array>
</resources>