<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gainsboro"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/hourText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/white"
        android:minEms="3"
        android:textColor="@color/black"
        android:paddingHorizontal="4dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mondayLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_text_view_size"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/monday"
        android:textColor="@color/black"
        android:textSize="@dimen/week_view_header_text_size"
        app:layout_constraintEnd_toStartOf="@id/tuesdayLayout"
        app:layout_constraintStart_toEndOf="@id/hourText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tuesdayLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_text_view_size"
        android:background="@color/white"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/tuesday"
        android:textSize="@dimen/week_view_header_text_size"
        app:layout_constraintEnd_toStartOf="@id/wednesdayLayout"
        app:layout_constraintStart_toEndOf="@id/mondayLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wednesdayLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_text_view_size"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textSize="@dimen/week_view_header_text_size"
        app:layout_constraintEnd_toStartOf="@id/thursdayLayout"
        app:layout_constraintStart_toEndOf="@id/tuesdayLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thursdayLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_text_view_size"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/thursday"
        android:textSize="@dimen/week_view_header_text_size"
        app:layout_constraintEnd_toStartOf="@id/fridayLayout"
        app:layout_constraintStart_toEndOf="@id/wednesdayLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fridayLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_text_view_size"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/friday"
        android:textSize="@dimen/week_view_header_text_size"
        app:layout_constraintEnd_toStartOf="@id/saturdayLayout"
        app:layout_constraintStart_toEndOf="@id/thursdayLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saturdayLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_text_view_size"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/saturday"
        android:textSize="@dimen/week_view_header_text_size"
        app:layout_constraintEnd_toStartOf="@id/sundayLayout"
        app:layout_constraintStart_toEndOf="@id/fridayLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sundayLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_text_view_size"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/sunday"
        android:textSize="@dimen/week_view_header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saturdayLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>