<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/gainsboro"
    android:orientation="vertical">

    <TextView
        android:id="@+id/moveUpButton"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/selector_dialog_background"
        android:gravity="center"
        android:minEms="20"
        android:padding="10dp"
        android:text="@string/move_up"
        android:textColor="@color/selector_dialog_foreground_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/moveDownButton"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/selector_dialog_background"
        android:gravity="center"
        android:minEms="20"
        android:padding="10dp"
        android:text="@string/move_down"
        android:textColor="@color/selector_dialog_foreground_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/deleteButton"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/selector_dialog_background"
        android:gravity="center"
        android:minEms="20"
        android:padding="10dp"
        android:text="@string/delete"
        android:textColor="@color/selector_dialog_foreground_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cancelButton"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_dialog_background"
        android:gravity="center"
        android:minEms="20"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/selector_dialog_foreground_color"
        android:textSize="20sp" />

</LinearLayout>