<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    tools:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/solitude"
        android:layout_marginHorizontal="4dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_video_name"
            android:textSize="10sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <TextView
            android:id="@+id/headingIrName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:text="@string/instructor_name"
            android:textSize="10sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headingCalBurnt"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headingCalBurnt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:text="@string/cal_burnt"
            android:textSize="10sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headingReleaseDate"
            app:layout_constraintStart_toEndOf="@id/headingIrName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headingReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:text="@string/release_date"
            android:textSize="10sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headingVideoLength"
            app:layout_constraintStart_toEndOf="@id/headingCalBurnt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headingVideoLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:text="@string/video_length"
            android:textSize="10sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/headingReleaseDate"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/videoItemsNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addVideosBtn"
        app:layout_constraintTop_toBottomOf="@id/headingLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videoItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="7dp"
            tools:listitem="@layout/create_event_video_details_item" />

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/addVideosBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="7dp"
        android:background="?attr/colorAccent"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/add_more_videos"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoItemsNestedScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>